# py-fastapi-homework-5-ec2-deploy-task

./: .env.sample  .flake8  Dockerfile  README.MD  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-tests.yml  pyproject.toml  pytest.ini
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml  main.yml
commands/: run_migration.sh  run_web_server_dev.sh  run_web_server_prod.sh  set_nginx_basic_auth.sh  setup_mailhog_auth.sh  setup_minio.sh
configs/nginx/: nginx.conf
docker/mailhog/: Dockerfile
docker/minio_mc/: Dockerfile
docker/nginx/: .env.sample  Dockerfile
docker/tests/: Dockerfile
src/: main.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  populate.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/models/: accounts.py  base.py  movies.py
src/database/seed_data/: test_data.csv
src/database/validators/: accounts.py
src/exceptions/: __init__.py  email.py  security.py  storage.py
src/notifications/: __init__.py  emails.py  interfaces.py
src/notifications/templates/: activation_complete.html  activation_request.html  password_reset_complete.html  password_reset_request.html
src/routes/: __init__.py  accounts.py  movies.py  profiles.py
src/schemas/: __init__.py  accounts.py  movies.py  profiles.py
src/security/: http.py  interfaces.py  passwords.py  token_manager.py  utils.py
src/storages/: __init__.py  interfaces.py  s3.py
src/tests/: conftest.py
src/validation/: __init__.py  profile.py
(+11 files in other folders)
